# tdd-googletest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  sample1.cpp  sample2.cpp
src/Soundex/: Soundex.h
src/sample_lib_1/: CMakeLists.txt
src/sample_lib_2/: CMakeLists.txt
tests/: CMakeLists.txt
tests/1/: CMakeLists.txt  SoundexTest.cpp
tests/3/: SoundexTest.cpp
tests/5/: SoundexTest.cpp
tests/testSampleLib1/: CMakeLists.txt  testSampleLib1.cpp
tests/testSampleLib2/: CMakeLists.txt
